examples/test/testpolicy19133.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19133
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key4: value23
      key18: value11
      key41: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value17
          key33: value49
          key14: value24
      podSelector:
        matchLabels:
          key43: value39
          key38: value13
          key3: value21
